Update spark/apache_spark_configuration.md